[project]
name = "env-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "fake-useragent>=2.0.3",
    "faker>=36.1.1",
    "ipykernel>=6.29.5",
    "jieba>=0.42.1",
    "lxml[cssselect]>=5.3.1",
    "mashumaro[orjson,toml]>=3.15",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "playwright>=1.51.0",
    "pypinyin>=0.53.0",
    "requests>=2.32.3",
    "wordcloud>=1.9.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
windows = [
    "pywin32>=308",
]
