[project]
name = "env-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "fake-useragent>=2.0.3",
    "faker>=36.1.1",
    "ipykernel>=6.29.5",
    "lxml[cssselect]>=5.3.1",
    "mashumaro[orjson,toml]>=3.15",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydantic>=2.12.4",
    "pypinyin>=0.53.0",
    "pyyaml>=6.0.2",
    "pywin32>=308 ; sys_platform == 'win32'",
    "requests>=2.32.3",
    "rtoml>=0.12.0",
    "wordcloud>=1.9.4",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "types-lxml>=2025.11.25",
    "types-openpyxl>=3.1.5.20250919",
]
